<resources>

    <string name="app_name">Dentist</string>
    <string name="title">Dentist</string>
    <string name="tab1">Intro</string>
    <string name="tab2">News</string>
    <string name="tab3">therapy</string>
    <string name="tab4">Doctoer</string>
    <string name="newReservation">New Reservation</string>
    <string name="myReservation">My Reservation(s)</string>
    <string name="doctorSelectTitle">Select Doctor:</string>
    <string name="login">Login</string>
    <string name="loginAccountTitle">National ID:</string>
    <string name="submit">Submit</string>
    <string name="passwordTitle">Password:</string>
    <string name="passwordRequest">must 8 to 12 charecters</string>
    <string name="idRequest">Passport or National ID number</string>
    <string name="forgetPW">forget password</string>
    <string name="newAccount">Sing In </string>
    <string name="passwordError001Len">must 8 to 12 charecters</string>
    <string name="passwordError002Character">must including 1. capital letters or lowercase (A~Z)(a~z) 2. numbers (0~9)</string>
    <string name="loginSuceesfully">Login Sucees</string>
    <string name="nameTitle">Name:</string>
    <string name="rePassword">Confirm PW:</string>
    <string name="telephoneNum">PhoneNum</string>
    <string name="emailTitle">E-mail</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="singin">Singin</string>
    <string name="cancel">Cancel</string>
    <string name="nameNoEmpty">Name is  blank</string>
    <string name="passwordError003dif">The two passwords must be the same</string>
    <string name="phoneTooShort">Phone Number must 10 charecters or more</string>
    <string name="acconut">Account</string>
    <string name="accoutCheck">Check</string>
    <string name="accountNoEmpty">Account is blank</string>
    <string name="forgetPassworCheckEmail">Please check your email for new password</string>
    <string name="accountCreated">New Account Created</string>
    <string name="logoutSuceesfully">Logout Sucess</string>
    <string name="logout">Logout</string>
    <string name="passwordChange">Password Change</string>
    <string name="modifyYouData">Modify Your Data</string>
    <string name="wait">Waitting.....</string>
    <string name="networNotWork">Please check your network</string>
    <string name="newPassword">New Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="passwordChanged">Password Changed</string>
    <string name="allDrctor">All Doctors</string>
    <string name="treatment">Treatment</string>
    <string name="plsSelectDoctor">Please choose a doctor</string>
    <string name="reservationConfirmation">Reservation Confirmation</string>
    <string name="historyAppointment">Expired</string>
    <string name="ReservationConfirmation">Confirm</string>
    <string name="myAppointment">My Appointment</string>
    <string name="doctorName">Doctor Name</string>
    <string name="appointmentTime">Appointment</string>
    <string name="changePassword">Chaneg Password</string>

</resources>
