<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="idv.swj.dentist.ChangePinActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="75dp"
        android:layout_height="83dp"
        android:text="@string/passwordRequest"
        android:textColor="#40000000"
        android:textSize="12sp"
        tools:layout_editor_absoluteY="104dp"
        tools:layout_editor_absoluteX="278dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/rePassword"
        android:textSize="16sp"
        tools:layout_editor_absoluteY="173dp"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/passwordTitle"
        android:textSize="16sp"
        tools:layout_editor_absoluteY="122dp"
        tools:layout_editor_absoluteX="37dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="198dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="104dp"
        tools:layout_editor_absoluteX="80dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="198dp"
        android:layout_height="28dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="165dp"
        tools:layout_editor_absoluteX="80dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acconut"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="53dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="256dp"
        tools:layout_editor_absoluteY="221dp" />
</android.support.constraint.ConstraintLayout>
