<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.insidesolution.dentist.ModifyData"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/acconut"
        android:textColor="@color/mainDarkGrayText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/maAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/nameTitle"
        android:textColor="@color/mainDarkGrayText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maAccount" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_2h"
        android:onClick="onClickChangePassword"
        android:text="@string/passwordChange"
        android:textColor="@color/mainLightText"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/emailTitle"
        android:textColor="@color/mainDarkGrayText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maPhone" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        android:textColor="@color/mainDarkGrayText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maEmail" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/telephoneNum"
        android:textColor="@color/mainDarkGrayText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maName" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/birthday"
        android:textColor="@color/mainDarkGrayText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29">

        <RadioButton
            android:id="@+id/maFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/female"
            app:layout_constraintLeft_toRightOf="@+id/maMale"
            app:layout_constraintTop_toTopOf="@+id/maMale" />

        <RadioButton
            android:id="@+id/maMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/male"
            app:layout_constraintLeft_toLeftOf="@+id/maEmail"
            app:layout_constraintTop_toBottomOf="@+id/maEmail" />

    </RadioGroup>

    <DatePicker
        android:id="@+id/maBirthday"
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:layout_marginStart="8dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintStart_toEndOf="@+id/textView30"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <EditText
        android:id="@+id/maName"
        android:layout_width="0dp"
        android:layout_height="39sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/round_rect_shap"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <EditText
        android:id="@+id/maEmail"
        android:layout_width="0dp"
        android:layout_height="39sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/round_rect_shap"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <EditText
        android:id="@+id/maPhone"
        android:layout_width="0dp"
        android:layout_height="39sp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/round_rect_shap"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <Button
        android:id="@+id/maSubmit"
        android:layout_width="153sp"
        android:layout_height="53sp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_3h"
        android:onClick="onClickSubmit"
        android:text="@string/submit"
        android:textColor="@color/mainLightText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="0dp"
        android:layout_height="44sp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/modifyYouData"
        android:textAlignment="center"
        android:textColor="@color/mainLightText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
