<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="idv.swj.dentist.CreateAccount"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nameTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/name"
        app:layout_constraintTop_toTopOf="@+id/name"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/createAccountTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/singin"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <EditText
        android:id="@+id/account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="-5dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/account"
        app:layout_constraintRight_toRightOf="@+id/account"
        app:layout_constraintTop_toBottomOf="@+id/account"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/idRequest"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/account"
        app:layout_constraintRight_toRightOf="@+id/account"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTitle" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/loginAccountTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/account"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/passwordRequest"
        android:textSize="10sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:text="@string/rePassword"
        app:layout_constraintTop_toTopOf="@+id/password2"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/password2"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/passwordTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/password1"
        app:layout_constraintTop_toTopOf="@+id/password1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        android:layout_marginTop="-5dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/password1"
        app:layout_constraintRight_toRightOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintRight_toRightOf="@+id/password2"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        app:layout_constraintLeft_toLeftOf="@+id/password2"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/telephoneNum"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/phone"
        app:layout_constraintTop_toTopOf="@+id/phone"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        app:layout_constraintRight_toRightOf="@+id/phone"
        app:layout_constraintLeft_toLeftOf="@+id/phone"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/emailTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <RadioButton
        android:id="@+id/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/male"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <RadioButton
        android:id="@+id/female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="8dp"
        android:text="@string/female"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/male"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/male"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_marginTop="0dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintRight_toRightOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/female" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/birthday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/male"
        app:layout_constraintTop_toTopOf="@+id/datePicker"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/singin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="submitCreatAccount"
        android:text="@string/singin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

    <Button
        android:id="@+id/cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker" />

</android.support.constraint.ConstraintLayout>
